<resources>
    <string name="app_name">My Applicatio</string>
    <string name="hotel">Hotel</string>
    <string name="steigenberger_makadi">Steigenberger Makadi</string>
    <string name="madinat_makadi_safaga_road_makadi_bay">Madinat Makadi,Safaga Road, Makadi Bay, Египет</string>
    <string name="тур">за тур с перелётом</string>
    <string name="price">ОТ 134 673Р</string>
    <string name="_3">3-я линия</string>
    <string name="forHotel">Об отеле</string>
    <string name="wi_fi">Платный Wi-Fi в фойе</string>
    <string name="_30">30км до аэропорта</string>
    <string name="_1">1км до пляжа</string>
    <string name="vip_18">Отель VIP-класса с собственном гольф полями.Высокий уровень сервиса.Рекомендуем для респектабельно отдыха. Отель принимает гостей от 18-лет</string>
    <string name="back">Назад</string>
    <string name="pool">Стандартный с видом на бассейн или сад</string>
    <string name="All">Все включено</string>
    <string name="штащ"><![CDATA[Информация >]]></string>
    <string name="info"><![CDATA[Информация >]]></string>
    <string name="_186_600">186 600Р</string>
    <string name="infotwo">за 7 ночей с перелётом</string>
    <string name="infothree">Выбрать номер</string>
    <string name="_5">5 Превосходно</string>
    <string name="Country">Санк-Петербург</string>
    <string name="flyin">Вылетел из</string>
    <string name="country">Страна,город</string>
    <string name="city">Египед Хургада</string>
    <string name="date">Даты</string>
    <string name="dateinfo">19.09.23-27.09.23</string>
    <string name="infodays">7-ночей</string>
    <string name="days">Кол-во ночей</string>
    <string name="gotelinfo">Отель</string>
    <string name="hotelname">Steingenberger Maradi</string>
    <string name="Numberroom">Номер</string>
    <string name="roominfo">Стандартный номер с видом на бассейн</string>
    <string name="phone">Ваш номер</string>
    <string name="infoOfclient">Информация о покупателе</string>
    <string name="Email">почта</string>
    <string name="nameclient">ФИО</string>
    <string name="passport">Номер загранпасспорта</string>
    <string name="Tur">Тур</string>
    <string name="gaz">Топлиный сбор</string>
    <string name="_9_300">9 300</string>
    <string name="_2_136">2 136</string>
    <string name="Gaz2">Сервисный сбор</string>
    <string name="HotelNum1">К выбору номера</string>
    <string name="Pay">Оплатить</string>
    <string name="vachZakazOplachen">Заказ оплачен</string>
    <string name="VashZakarPriniyatNaRaboty">Ваш заказ принят в работу</string>
    <string name="Okay">Супер!</string>
    <string name="Super">Супер!</string>
    <string name="Massage">Ваш заказ принят теперь ждёт обработку которая может занять не мнее 1 часа</string>
    <string name="_11">Наш отель обещяет вам тут не забываемые дни! Прихоидте и отдыхайте на всех точках мира ! В нашем отеле супер иновационные сотрудники а так же технолгии 11 поколения!</string>
</resources>